# glad

./: .gitignore  CMakeLists.txt  conanfile.py  devinfo.txt  readme.md
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c
src/include/: glad.h
src/include/glad/: glad.h
src/src/: glad.c
test_package/: CMakeLists.txt  conanfile.py  test.c
